<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Warsaw Trails</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dalej">Dalej</string>
    <string name="title_activity_navi">Warsaw Trails</string>

    <string-array name="navi_array">
        <item>Szlaki</item>
        <item>Dodaj szlak</item>
    </string-array>
    <string-array name="trails_types_array">
        <item>pieszy</item>
        <item>rowerowy</item>
        <item>kajakowy</item>
        <item>samochodowy</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_trail">Szlak</string>
    <string name="title_activity_new_trail">Dodawanie szlaku</string>
    <string name="trail_name">Nazwa szlaku</string>
    <string name="trail_description">Opis szlaku</string>
    <string name="button_continue">Dalej</string>
    <string name="trail_type">Typ szlaku</string>
    <string name="new_point">Nowy punkt</string>
    <string name="end_trail">Koniec szlaku</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="point_description">Opis punktu</string>
    <string name="point_name">Nazwa punktu</string>
    <string name="save">Zapisz</string>
    <string name="point_list">Lista punktów</string>
    <string name="trail_desc_opint">Opis punktu w kontekście szlaku</string>
    <string name="title_activity_trail_map">Nawigacja szlaku</string>
    <string name="rate">Oceń!</string>
    <string name="add_comment">Dodaj komentarz</string>
    <string name="follow_trail">Podążaj szlakiem</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="logon">Logowanie</string>
    <string name="comments">Komentarze</string>
    <string name="points_list">Litapunktów na trasie:</string>
    <string name="plist">Lista punktów na szlaku:</string>
    <string name="type">Typ szlaku:</string>
    <string name="time">Czas przebycia szlaku:</string>

</resources>