<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewTrailFragment" >

        <EditText
            android:id="@+id/edit_trail_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/trail_name" >

            <requestFocus />
        </EditText>
        
        <EditText
            android:id="@+id/edit_trail_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/trail_description"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/trails_types_array"
            android:prompt="@string/trail_type" />

        <Button
            android:id="@+id/button_trail_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_continue" />
        
</LinearLayout>