<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTrailActivity" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout android:id="@+id/new_or_end_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button_new_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_point"
                android:background="@drawable/btn_green" 
                style="@style/ButtonText" />

            <Button
                android:id="@+id/button_end_trail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_trail"
                android:background="@drawable/btn_green" style="@style/ButtonText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_point_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/button_add_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" 
                    android:background="@drawable/btn_green" style="@style/ButtonText"/>

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" 
                    android:background="@drawable/btn_green" style="@style/ButtonText"/>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_point_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/point_name" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edit_point_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/point_description"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/edit_description_trail_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trail_desc_opint"
                android:ems="10"
                android:inputType="textMultiLine" />

            <ListView
                android:id="@+id/list_points_existing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

        </LinearLayout>

        <fragment 
          android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.MapFragment"/>

    </LinearLayout>

</RelativeLayout>
